--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/kmannislands/typescript-yarn-workspace-example/issues"
   },
   "dependencies": {
+    "@cashew/common": "^1.0.0",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
